Added getLocation function that returns the current position of the ISS

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alvaro Castillo",
   "license": "MIT",
   "dependencies": {
+    "got": "^6.7.1",
     "hapi": "^13.5.3",
     "nodemon": "^1.11.0"
   }
