--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "geolib": "^2.0.22",
+    "good": "^6.6.3",
+    "good-console": "^5.3.2",
     "got": "^6.7.1",
+    "handlebars": "^4.0.6",
     "hapi": "^13.5.3",
     "joi": "^10.2.1",
     "nodemon": "^1.11.0"
