Changed routes to plugin

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "got": "^6.7.1",
     "handlebars": "^4.0.6",
     "hapi": "^13.5.3",
+    "inert": "^4.1.0",
     "joi": "^10.2.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "vision": "^4.1.1"
   }
 }
