--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "inert": "^4.1.0",
     "joi": "^10.2.1",
     "nodemon": "^1.11.0",
-    "vision": "^4.1.1"
+    "vision": "^4.1.1",
+    "vue": "^2.1.10"
   }
 }
