--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alvaro Castillo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "config": "^1.25.1",
     "geolib": "^2.0.22",
     "good": "^6.6.3",
@@ -18,6 +19,7 @@
     "hapi": "^13.5.3",
     "inert": "^4.1.0",
     "joi": "^10.2.1",
+    "lodash": "^4.17.4",
     "nodemon": "^1.11.0",
     "vision": "^4.1.1",
     "vue": "^2.1.10"
